// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FzButton > Snapshots > should match snapshot - backoffice environment 1`] = `
"<button type="button" class="relative rounded flex flex-shrink items-center justify-center font-normal border-1 border-transparent gap-8 h-44 px-12 min-w-96 bg-blue-500 text-core-white hover:bg-blue-600 focus:bg-blue-500 focus:!border-blue-600 disabled:bg-blue-200">
  <!--v-if-->
  <div class="truncate">some text</div>
  <!--v-if-->
</button>"
`;

exports[`FzButton > Snapshots > should match snapshot - backoffice environment 2`] = `
"<button type="button" class="relative rounded flex flex-shrink items-center justify-center font-normal border-1 border-transparent gap-8 h-44 px-12 min-w-96 bg-blue-500 text-core-white hover:bg-blue-600 focus:bg-blue-500 focus:!border-blue-600 disabled:bg-blue-200">
  <div class="flex items-center justify-items-center">
    <div class="flex items-center justify-center w-[20px] h-[20px]"><svg class="svg-inline--fa fa-bell h-[16px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="bell" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
        <path class="" fill="currentColor" d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 25.4c0 45.4-15.5 89.5-43.8 124.9L5.3 377c-5.8 7.2-6.9 17.1-2.9 25.4S14.8 416 24 416l400 0c9.2 0 17.6-5.3 21.6-13.6s2.9-18.2-2.9-25.4l-14.9-18.6C399.5 322.9 384 278.8 384 233.4l0-25.4c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm0 96c61.9 0 112 50.1 112 112l0 25.4c0 47.9 13.9 94.6 39.7 134.6L72.3 368C98.1 328 112 281.3 112 233.4l0-25.4c0-61.9 50.1-112 112-112zm64 352l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7s18.7-28.3 18.7-45.3z"></path>
      </svg></div>
  </div>
  <div class="truncate">some label</div>
  <!--v-if-->
</button>"
`;

exports[`FzButton > Snapshots > should match snapshot - backoffice environment 3`] = `
"<button type="button" class="relative rounded flex flex-shrink items-center justify-center font-normal border-1 border-transparent gap-8 h-44 px-12 min-w-96 bg-semantic-error-200 text-core-white hover:bg-semantic-error-300 focus:bg-semantic-error-200 focus:!border-semantic-error-300 disabled:bg-semantic-error-100">
  <!--v-if-->
  <div class="truncate">Danger Button</div>
  <!--v-if-->
</button>"
`;

exports[`FzButton > Snapshots > should match snapshot - backoffice environment 4`] = `
"<button type="button" class="relative rounded flex flex-shrink items-center justify-center font-normal border-1 border-transparent gap-8 h-44 px-12 min-w-96 bg-semantic-success-200 text-core-white hover:bg-semantic-success-300 focus:bg-semantic-success-200 focus:!border-semantic-success-300 disabled:bg-semantic-success-100">
  <!--v-if-->
  <div class="truncate">Success Button</div>
  <!--v-if-->
</button>"
`;

exports[`FzButton > Snapshots > should match snapshot - backoffice environment 5`] = `
"<button type="button" class="relative rounded flex flex-shrink items-center justify-center font-normal border-1 border-transparent gap-8 h-32 px-12 min-w-96 bg-blue-500 text-core-white hover:bg-blue-600 focus:bg-blue-500 focus:!border-blue-600 disabled:bg-blue-200">
  <!--v-if-->
  <div class="truncate">Backoffice Button</div>
  <!--v-if-->
</button>"
`;

exports[`FzButton > Snapshots > should match snapshot - frontoffice environment with icon 1`] = `
"<button type="button" class="relative rounded flex flex-shrink items-center justify-center font-normal border-1 border-transparent gap-8 h-44 px-12 min-w-96 bg-blue-500 text-core-white hover:bg-blue-600 focus:bg-blue-500 focus:!border-blue-600 disabled:bg-blue-200">
  <!--v-if-->
  <div class="truncate">Frontoffice Button</div>
  <div class="flex items-center justify-items-center">
    <div class="flex items-center justify-center w-[20px] h-[20px]"><svg class="svg-inline--fa fa-star h-[16px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="star" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
        <path class="" fill="currentColor" d="M287.9 0c9.2 0 17.6 5.2 21.6 13.5l68.6 141.3 153.2 22.6c9 1.3 16.5 7.6 19.3 16.3s.5 18.1-5.9 24.5L433.6 328.4l26.2 155.6c1.5 9-2.2 18.1-9.7 23.5s-17.3 6-25.3 1.7l-137-73.2L151 509.1c-8.1 4.3-17.9 3.7-25.3-1.7s-11.2-14.5-9.7-23.5l26.2-155.6L31.1 218.2c-6.5-6.4-8.7-15.9-5.9-24.5s10.3-14.9 19.3-16.3l153.2-22.6L266.3 13.5C270.4 5.2 278.7 0 287.9 0zm0 79L235.4 187.2c-3.5 7.1-10.2 12.1-18.1 13.3L99 217.9 184.9 303c5.5 5.5 8.1 13.3 6.8 21L171.4 443.7l105.2-56.2c7.1-3.8 15.6-3.8 22.6 0l105.2 56.2L384.2 324.1c-1.3-7.7 1.2-15.5 6.8-21l85.9-85.1L358.6 200.5c-7.8-1.2-14.6-6.1-18.1-13.3L287.9 79z"></path>
      </svg></div>
  </div>
</button>"
`;
